fix: decreases gap between links & removes bold font weight

--- a/src/components/Header/MobileNav/index.module.scss
+++ b/src/components/Header/MobileNav/index.module.scss
@@ -99,12 +99,15 @@
   @include mobile-header-break {
     gap: calc(var(--base) * 1.25);
   }
+
+  @include small-break {
+    gap: var(--base);
+  }
 }
 
 .mobileMenuItem {
   @include h3;
   margin: 0;
-  font-weight: bold;
   text-decoration: none;
 
   @include small-break {
